Correction des bugs et amélioration dans les combobox
La connection fonctionne (mais impossible des recupérer les données), les combobox dans la partie Admin s'affichent correctement.

--- a/Localtion_JV.csproj
+++ b/Localtion_JV.csproj
@@ -8,11 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="accueil.png" />
+    <Compile Remove="factory\**" />
+    <EmbeddedResource Remove="factory\**" />
+    <None Remove="factory\**" />
+    <Page Remove="factory\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="factory\" />
+    <None Remove="accueil.png" />
   </ItemGroup>
 
   <ItemGroup>
