Correction bugs avec les datetime
Correction des bugs liés aux datetimes dans la partie inscription et dans la reservation.

--- a/Localtion_JV.csproj
+++ b/Localtion_JV.csproj
@@ -27,4 +27,8 @@
     <Resource Include="accueil.png" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="sql\" />
+  </ItemGroup>
+
 </Project>
