--- a/Localtion_JV.csproj
+++ b/Localtion_JV.csproj
@@ -15,12 +15,20 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="accueil.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.0.1" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="sql\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="accueil.png" />
   </ItemGroup>
 
 </Project>
